# Esterv.Crypto.Ed25519

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  qed25519.cpp
.github/workflows/: build-test-install.yml
CMake/: FindSodium.cmake
include/crypto/: qed25519.hpp
include/esterv/crypto/: ed25519.hpp
src/: add_scalar.c  ed25519.cpp  ed25519.h  fe.c  fixedint.h  ge.c  ge.h  key_exchange.c  keypair.c  qed25519.cpp  sc.c  seed.c  sha512.c  sha512.h  sign.c  verify.c
tests/: CMakeLists.txt  rfc8032.cpp  tip14.cpp
